Include test_data_sets in libmultiview so it can be used in other tests

--- a/src/libmv/multiview/CMakeLists.txt
+++ b/src/libmv/multiview/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(MULTIVIEW_SRC projection.cc
                   similarity.cc
                   similarity_kernel.cc
                   euclidean.cc
+                  test_data_sets.cc
                   euclidean_kernel.cc
                   robust_euclidean.cc)
 
